# examen-parcial-Tema2

./: CMakeLists.txt  README.md  main.cpp  main.h
Ejercicio 1/: ejercicio1.cpp  ejercicio1.h
Ejercicio 2/: ejercicio2.cpp  ejercicio2.h
Ejercicio 3/: ejercicio3.cpp  ejercicio3.h
Ejercicio 4/: ejercicio4.cpp  ejercicio4.h
